docker/kubeconfig/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-backend
  namespace: employee-namespace   # ✅ Replace with your namespace name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-backend
  template:
    metadata:
      labels:
        app: employee-backend
    spec:
      containers:
        - name: employee-backend
          image: IMAGE_PLACEHOLDER  # Change if using Docker Hub/Harbor
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kv-secrets"
