docker/kubeconfig/service.yml
apiVersion: v1
kind: Service
metadata:
  name: employee-backend-service
  labels:
    app: employee-backend
spec:
  type: LoadBalancer
  selector:
    app: employee-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
